syntax = "proto3";

package proto;
option go_package = "./;proto";

import "AbilityInvokeEntry.proto";

// CmdId: 1131
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message AbilityInvocationsNotify {
  repeated AbilityInvokeEntry invokes = 8;
}
