syntax = "proto3";

package proto;
option go_package = "./;proto";

message EnterSceneReadyReq {
  uint32 enterSceneToken = 1;
}
