syntax = "proto3";

package proto;
option go_package = "./;proto";


message GetScenePointReq {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 230;
  }

  uint32 scene_id = 4;
  uint32 belong_uid = 10;
}
