syntax = "proto3";

package proto;
option go_package = "./;proto";

import "ChatInfo.proto";

message PlayerChatReq {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 3378;
  }

  uint32 channel_id = 9;
  ChatInfo chat_info = 1;
}
