syntax = "proto3";

package proto;
option go_package = "./;proto";


message PullPrivateChatReq {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 4967;
  }

  uint32 target_uid = 2;
  uint32 from_sequence = 7;
  uint32 pull_num = 5;
}
